--- a/assets/tt/web/css/main.css
+++ b/assets/tt/web/css/main.css
@@ -61,6 +61,23 @@ a .n2{
 
 /*以上为导航栏样式，以下为首页正文样式*/
 
+.realPlace-name{
+	width: 1090px;
+	margin-left: auto;
+	margin-right: auto;
+}
+.realPlace{
+	width: 1090px;
+	margin-left: auto;
+	margin-right: auto;
+}
+.realPlace-smallName{
+	width: 480px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 40px;
+}
+
 .headername{
 	margin-top: 70px;
 	width: 100%;
@@ -160,7 +177,7 @@ tr:hover > td, .table-hover tbody tr:hover > th {
 
 .footer{
 	width: 100%;
-	margin-top: 60px;
+	margin-top: 320px;
 	
 }
 
@@ -170,16 +187,12 @@ tr:hover > td, .table-hover tbody tr:hover > th {
 }
 
 /*以上为尾栏样式，以下为 活动公告 的正文样式*/
-.smallheadername{
-	margin-top: 40px;
-	width: 100%;
-}
+
 
 .smallname{
 	background: url(../image/wlug_s.png) no-repeat;
 	width:711px;
 	height: 72px;
-	margin-left: 80px;
 }
 
 .activity_name{
@@ -189,14 +202,8 @@ tr:hover > td, .table-hover tbody tr:hover > th {
 	padding-left: 80px;
 }
 
-.big{
-	color:#343535;
-	font-size: 22px;
-	line-height: 20px;
-}
-
 .activity_contain{
-	margin-top: 30px;
+	margin-top: 60px;
 }
 .activity_border{
 	border: 1px #b0b0b2;
@@ -204,7 +211,7 @@ tr:hover > td, .table-hover tbody tr:hover > th {
 	border-radius: 6px;
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 6px; 
-	padding: 40px 30px 40px 24px;
+	padding: 40px 30px 25px 24px;
 	background: #f7f6f7;
 }
 
@@ -215,7 +222,6 @@ tr:hover > td, .table-hover tbody tr:hover > th {
 
 .activity_title{
 	font-size: 24px;
-	font-weight: bold;
 	color:#3c3c3d;
 	
 }
@@ -230,26 +236,28 @@ tr:hover > td, .table-hover tbody tr:hover > th {
 .activity_date{
 	text-align: right;
 	padding-bottom: 6px;
-	font-weight: bold;
 }
 
 .activity_t{
 	height:60px;
 	overflow:hidden;
 	text-overflow:ellipsis;
-	width:420px;
 	/*white-space:nowrap;*/
+	margin-top: 5px;
 }
 
 .activity_more{
 	padding-top: 8px;
-	font-weight: bold;
 }
 
 .activity_check{
 	text-align: right;
+	float: right;
+	color: #595a5b;
 }
-
+.activity_check:hover{
+	color: #0088cc;
+}
 .page{
 	margin: 20px 0px 0px 0px;
 	text-align: center;
@@ -281,12 +289,60 @@ tr:hover > td, .table-hover tbody tr:hover > th {
   color:#3e3e3f;
 }
 
+.now-page{
+	color: #3e3e3f;
+}
+
 /*以下为 活动公告正文 的正文样式*/
 
-.small{
+.title-small{
+
+	line-height: 20px;
+}
+.title-big{
+	position:relative;
+	color:#343535;
+	font-size: 26px;
+	line-height: 20px;
+	float: left;
+	bottom: 1px;
+}
+.first-title{
 	color:#595a5b;
 	font-size: 20px;
-	line-height: 20px;
+	position:relative;
+	right: 20px;
+}
+.title-doc{
+	margin-top: 5px;
+	margin-left: 7px;
+	margin-right: 7px;
+	float: left;
+	width: 10px;
+	height: 10px;
+	background: url(../image/doc.png) no-repeat;
+}
+.first-title span{
+	float: left;
+}
+.second-title{
+	position: relative;
+	right: 15px;
+}
+
+.realContent{
+	width: 720px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 50px;
+}
+.content-subTitle-left{
+	position: relative;
+	float: left;
+	margin-right: 40px;
+}	
+.content-subTitle-right{
+
 }
 
 .activity_2_total{
@@ -306,7 +362,9 @@ tr:hover > td, .table-hover tbody tr:hover > th {
 
 .activity_2_time{
 	color:#959799;
-	font-size: 14px;
+	font-size: 16px;
+	height: 20px;
+	margin-left: 116px;
 }
 
 .activity_2_text{
@@ -316,8 +374,11 @@ tr:hover > td, .table-hover tbody tr:hover > th {
 }
 
 .activity_2_more{
-	padding:0px 0px 0px 0px;
+	padding:5px 0px 0px 0px;
 	font-size: 14px;
+}
+.readCount{
+	float: right;
 }
 
 /*以下是关于我们 的样式*/
@@ -330,4 +391,14 @@ tr:hover > td, .table-hover tbody tr:hover > th {
 	font-size: 22px;
 	line-height: 28px;
 	text-align: center;
+}
+
+.realContent-activity{
+	width: 900px;
+	margin-top: 60px;
+	margin-left: auto;
+	margin-right: auto;
+}
+.more-doc{
+	font-size: 22px;
 }
