--- a/plugin/eventsetter/delete.rhtml
+++ b/plugin/eventsetter/delete.rhtml
@@ -1,14 +1,7 @@
-<div style="margin-bottom: 10px;">
-	<a href="/wlg/setting/event/add" class="btn btn-success"><i class="icon-plus-sign"></i>添加</a>
+<div style="margin-bottom: 20px;">
+	<a href="/wlg/setting/event/add" class="btn btn-success">添加</a>
+	<a href="/wlg/setting/event" class="btn">返回</a>
 </div>
-<ol class="breadcrumb">
-	<li>
-	<a href="/wlg/setting/event">活动公告</a> <span class="divider">/</span>
-	</li>
-	<li class="active">
-	删除
-	</li>
-</ol>
-<div class="container span11 list">
-	<h3><%=del_content%></h3>
+<div class="container">
+	<h4><%=del_content%></h4>
 </div>
