--- a/plugin/affair/page.rhtml
+++ b/plugin/affair/page.rhtml
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Wuhan Linux user group 事务列表</title>
+<title>Wuhan Linux user group </title>
 <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
 <link rel="stylesheet" href="/css/main.css">
 </head>
@@ -45,8 +45,8 @@
       <li class="divider-vertical n3"></li>
       <li class="n1 text-center">
       <a href="/introduction">
-        WhLug介绍
-        <p class="n2">About  WhLug</p>
+        WhLUG介绍
+        <p class="n2">About  WhLUG</p>
       </a>
       </li>
 
