--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,6 +11,29 @@ a:hover {
   color: #08c;
 }
 
+div.subscribe{
+  margin-top: 56px;
+  height: 70px;
+}
+div.subscribe .sub_rss{
+  float: left;
+}
+div.subscribe .sub_email{
+  width: 1000px;
+  float: left;
+  margin-top: 20px;
+  margin-left: 20px;
+}
+div.subscribe .sub_email .sub_email_groups{
+  float: left;
+}
+div.subscribe .sub_email .sub_email_input{
+  float: left;
+  margin-left: 10px;
+}
+div.subscribe .sub_email .sub_email_input .sub_email_input_btn{
+  margin-bottom: 6px;
+}
 .headerlist{
 	width: 100%;
 	background: url('/image/nav.png') repeat-x;
