--- a/plugin/event/page.rhtml
+++ b/plugin/event/page.rhtml
@@ -45,8 +45,8 @@
       <li class="divider-vertical n3"></li>
       <li class="n1 text-center">
       <a href="/introduction">
-        WhLug介绍
-        <p class="n2">About  WhLug</p>
+        WhLUG介绍
+        <p class="n2">About  WhLUG</p>
       </a>
       </li>
 
