--- a/plugin/index/index.rhtml
+++ b/plugin/index/index.rhtml
@@ -45,8 +45,8 @@
       <li class="divider-vertical n3"></li>
       <li class="n1 text-center">
       <a href="/introduction">
-        WhLug介绍
-        <p class="n2">About  WhLug</p>
+        WhLUG介绍
+        <p class="n2">About  WhLUG</p>
       </a>
       </li>
 
@@ -141,6 +141,15 @@
       </div>
     </div>
   </div>
+  <div class="realPlace subscribe">
+    <div class="sub_rss"><a href="/feed" title="订阅"><img src="/image/rss.png"></a></div>
+    <div class="sub_email">
+      <div class="sub_email_groups"><img src="/image/google_group.png"></div>
+      <div class="sub_email_input">
+        <input class="span3" type="text" id="s_email" placeholder="your email"><button class="btn btn-link sub_email_input_btn" id="s_sub">Subscribe</button>
+      </div>
+    </div>
+  </div>
 </div>
 <div class="container-fluid footer">
   <div class="row-fluid">
@@ -149,5 +158,15 @@
     </div>
   </div>
 </div>
+<script type="text/javascript">
+document.getElementById('s_sub').onclick = function(){
+  email = document.getElementById('s_email').value;
+  if(/^\w+([-+.]\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*$/.test(email) === false){
+    alert('Email Format Error');
+  }else{
+    window.location.href = 'http://groups.google.com/group/wuhanlug/boxsubscribe?email=' + email
+  }
+}
+</script>
 </body>
 </html>
