--- a/plugin/setter/admin_setter.rhtml
+++ b/plugin/setter/admin_setter.rhtml
@@ -36,6 +36,22 @@
       </li>
 
       <li class="divider-vertical n3"></li>
+      <li class="n1 text-center">
+      <a href="/wlg/logout">
+        退出
+        <p class="n2">logout</p>
+      </a>
+      </li>
+
+      <li class="divider-vertical n3"></li>
+      <li class="n1 text-center">
+      <a href="/">
+        预览
+        <p class="n2">preview</p>
+      </a>
+      </li>
+      </li>
+      <li class="divider-vertical n3"></li>
     </ul>
   </div>
 </div>
