--- a/plugin/summary/page.rhtml
+++ b/plugin/summary/page.rhtml
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Wuhan Linux user group 活动回顾列表</title>
-<link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
+<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
