--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 body{
 	font-family: Microsoft YaHei,Tahoma, Arial,SimSun,Verdana;
-	background: url('/image/bg.png') repeat;
+	background: url('/image/bg.jpg') repeat;
 	overflow-x:hidden;
 }
 
