--- a/plugin/common/image_browser.rhtml
+++ b/plugin/common/image_browser.rhtml
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Wuhan Linux user group </title>
-<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="/css/bootstrap.min.css">
 <link rel="stylesheet" href="/css/main.css">
 <style type="text/css">
 div.gallery{
