--- a/plugin/index/index.rhtml
+++ b/plugin/index/index.rhtml
@@ -28,7 +28,7 @@
 
       <li class="divider-vertical n3"></li>
       <li class="n1 text-center">
-      <a href="/event">
+      <a href="/activity">
         活动
         <p class="n2">Activities</p>
       </a>
