--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,24 +1,25 @@
 body{font-family:Microsoft YaHei,Tahoma, Arial,SimSun,Verdana;background:url('/image/bg.jpg') repeat;overflow-x:hidden;}
 a{color:#595a5b;}
 a:hover{color:#08c;}
+.container-fluid{padding:0 !important;}
+.headerlist{width:100%;background:url('/image/nav.png') repeat-x;height:82px;}
 div.subscribe{margin-top:56px;height:70px;}
 div.subscribe .sub_rss{float:left;}
 div.subscribe .sub_email{width:1000px;float:left;margin-top:20px;margin-left:20px;}
 div.subscribe .sub_email .sub_email_groups{float:left;}
 div.subscribe .sub_email .sub_email_input{float:left;margin-left:10px;}
 div.subscribe .sub_email .sub_email_input .sub_email_input_btn{margin-bottom:6px;}
-.headerlist{width:100%;background:url('/image/nav.png') repeat-x;height:82px;}
 #titlelist{width:980px;margin:0 auto;display:block;}
 #titlelist li{float:left;display:inline;}
 li{list-style:none;}
-#titlelist li.n1{width:14%;}
+#titlelist li.n1{width:140px;}
 #titlelist li a{padding:20px 10px 2px 10px;display:block;font-size:18px;cursor:pointer;color:#d4d7d8;text-decoration:none;}
 #titlelist li a:hover{color:#8063f3;}
 a .n2{font-size:14px;}
 #titlelist li.n3{margin-top:16px;border-right:1px solid #000000;border-left:1px solid #333333;}
 .realPlace-name{width:1090px;margin-left:auto;margin-right:auto;}
 .realPlace{width:1090px;margin-left:auto;margin-right:auto;}
-.realPlace-smallName{width:480px;margin-left:auto;margin-right:auto;margin-top:40px;}
+.realPlace-smallName{width:717px;margin-left:auto;margin-right:auto;margin-top:40px;}
 .headername{margin-top:70px;width:100%;}
 .name{background:url('/image/wlug_b.png') no-repeat;width:1090px;height:109px;}
 .Lcontain{margin-top:100px;width:100%;}
@@ -36,7 +37,7 @@ td.date{text-align:right;}
 tr:hover > td, .table-hover tbody tr:hover > th{background-color:#f7f7f7;}
 .footer{width:100%;margin-top:320px;}
 .footer p{text-align:center;color:#868787;}
-.smallname{background:url('/image/wlug_s.png') no-repeat;width:711px;height:72px;}
+.smallname{background:url('/image/wlug_s.png') no-repeat;width:717px;height:72px;}
 .activity_name{width:980px;margin:0 auto;display:block;padding-left:80px;}
 .activity_contain{margin-top:60px;}
 .activity_border{border:1px #b0b0b2;border-style:solid;border-radius:6px;-webkit-border-radius:6px;-moz-border-radius:6px;padding:40px 30px 25px 24px;background:#f7f6f7;}
@@ -65,12 +66,12 @@ tr:hover > td, .table-hover tbody tr:hover > th{background-color:#f7f7f7;}
 .content-subTitle-right{}
 .activity_2_total{padding:0px 40px 0px 40px;color:#595a5b;}
 .activity_2_title{}
-.activity_2_titlename{text-align:center;font-size:24px;margin-bottom:20px;line-height:24px;}
+.activity_2_titlename{text-align:center;font-size:24px;margin-bottom:20px;}
 .activity_2_time{color:#959799;font-size:16px;height:20px;margin-left:116px;}
 .activity_2_text{padding:20px 0px 6px 0px;font-size:20px;line-height:28px;}
 .activity_2_more{padding:5px 0px 0px 0px;font-size:14px;}
 .readCount{float:right;}
-.aboutus{height:200px;}
+.aboutus{}
 .contactus{font-size:22px;line-height:28px;text-align:center;}
 .realContent-activity{width:900px;margin-top:60px;margin-left:auto;margin-right:auto;}
 .more-doc{font-size:22px;}
