--- a/plugin/event/page.rhtml
+++ b/plugin/event/page.rhtml
@@ -45,8 +45,8 @@
       <li class="divider-vertical n3"></li>
       <li class="n1 text-center">
       <a href="/introduction">
-        WhLUG介绍
-        <p class="n2">About  WhLUG</p>
+        WHLUG介绍
+        <p class="n2">About  WHLUG</p>
       </a>
       </li>
 
@@ -135,10 +135,8 @@
     </div>
   </div>
 </div>
-<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-ga('create', 'UA-43673558-1', 'whlug.org');
-ga('send', 'pageview');
+<script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Ff6de69fb77d2cb3c0bc1ff223942ac51' type='text/javascript'%3E%3C/script%3E"));
 </script>
 </body>
 </html>
